test/conformance/chainsaw/validate/policy/standard/psa/test-exclusion-procMount/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test-exclusion-procmount
spec:
  background: true
  validationFailureAction: Enforce
  rules:
  - name: test-exclusion-procmount
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      podSecurity:
        level: baseline
        version: latest
        exclude:
        - controlName: "/proc Mount Type"
          images:
          - nginx
          restrictedField: "spec.containers[*].securityContext.procMount"
          values:
          - "foo"
        - controlName: "/proc Mount Type"
          images:
          - nginx
          restrictedField: "spec.initContainers[*].securityContext.procMount"
          values:
          - "bar"
