test/conformance/chainsaw/validate/policy/standard/psa/test-exclusion-procMount/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test-exclusion-procmount
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
